--- a/SCDC/Base.lproj/Main_iPhone.storyboard
+++ b/SCDC/Base.lproj/Main_iPhone.storyboard
@@ -129,14 +129,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <searchBar key="tableHeaderView" contentMode="redraw" id="Q2o-Wa-hNB">
-                            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            <textInputTraits key="textInputTraits"/>
-                        </searchBar>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="classList" rowHeight="114" id="LqD-SM-AT4">
-                                <rect key="frame" x="0.0" y="66" width="320" height="114"/>
+                                <rect key="frame" x="0.0" y="86" width="320" height="114"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="LqD-SM-AT4" id="B53-Kg-dDw">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="113"/>
@@ -248,13 +243,14 @@
                     <navigationItem key="navigationItem" id="s99-Vz-TH8">
                         <barButtonItem key="leftBarButtonItem" title="Back" id="5cr-Ct-54t">
                             <connections>
-                                <segue destination="FTt-Rc-K8F" kind="modal" id="ZXC-Jk-E1f"/>
+                                <segue destination="CeL-tu-TOx" kind="unwind" unwindAction="unwindToClassess:" id="20k-6A-sKf"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cxQ-FU-Jc9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="CeL-tu-TOx" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1258" y="-19"/>
         </scene>
@@ -407,6 +403,5 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="gdu-LV-txU"/>
-        <segue reference="ZXC-Jk-E1f"/>
     </inferredMetricsTieBreakers>
 </document>
